Pages hooked up

--- a/contract-fees.html
+++ b/contract-fees.html
@@ -4,6 +4,7 @@
   <head>
     <title>6. Contract &amp; Fees - CORE DD</title>
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
+    <meta property="og:title" content="CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
 
@@ -59,16 +60,18 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="contract-fees-logo"
-          />
+          <a href=".html" class="contract-fees-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="contract-fees-logo"
+            />
+          </a>
         </div>
         <div class="contract-fees-side-nav-bar">
           <span class="contract-fees-loan-name">872346 Jackson Smith</span>
           <li class="contract-fees-supplementary-contracts list-item">
-            <a href="file-dd-21111.html" class="contract-fees-navlink">
+            <a href="file-dd-21111.html" class="contract-fees-navlink1">
               Truth in Lending
             </a>
           </li>
@@ -76,32 +79,32 @@
             <span class="contract-fees-text">Contract &amp; Fees</span>
           </li>
           <li class="contract-fees-miscellaneous1 list-item">
-            <a href="file-dd-2111111.html" class="contract-fees-navlink1">
+            <a href="file-dd-2111111.html" class="contract-fees-navlink2">
               Warranty
             </a>
           </li>
           <li class="contract-fees-miscellaneous2 list-item">
-            <a href="file-dd-21111111.html" class="contract-fees-navlink2">
+            <a href="file-dd-21111111.html" class="contract-fees-navlink3">
               GAP
             </a>
           </li>
           <li class="contract-fees-miscellaneous3 list-item">
-            <a href="file-dd-211111111.html" class="contract-fees-navlink3">
+            <a href="file-dd-211111111.html" class="contract-fees-navlink4">
               Service Contract
             </a>
           </li>
           <li class="contract-fees-miscellaneous4 list-item">
-            <a href="file-dd-2111111111.html" class="contract-fees-navlink4">
+            <a href="file-dd-2111111111.html" class="contract-fees-navlink5">
               Title
             </a>
           </li>
           <li class="contract-fees-miscellaneous5 list-item">
-            <a href="file-dd-21111111111.html" class="contract-fees-navlink5">
+            <a href="file-dd-21111111111.html" class="contract-fees-navlink6">
               GPS
             </a>
           </li>
           <li class="contract-fees-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="contract-fees-navlink6">
+            <a href="file-dd-2111.html" class="contract-fees-navlink7">
               Data Match
             </a>
           </li>
@@ -251,6 +254,12 @@
         <span class="contract-fees-is-there-a-cobuyer5">No</span>
         <span class="contract-fees-is-there-a-cobuyer6">No</span>
         <span class="contract-fees-is-there-a-cobuyer7">No</span>
+        <a href="file-dd-21111.html" class="contract-fees-last button">
+          <span class="contract-fees-text3">Last</span>
+          <svg viewBox="0 0 1024 1024" class="contract-fees-left-arrow">
+            <path d="M658 708l-60 60-256-256 256-256 60 60-196 196z"></path>
+          </svg>
+        </a>
       </div>
     </div>
   </body>
