--- a/misc.html
+++ b/misc.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="8. GAP - CORE DD" />
     <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
+    <meta property="og:title" content="CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
 
@@ -62,11 +63,13 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="misc-logo"
-          />
+          <a href=".html" class="misc-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="misc-logo"
+            />
+          </a>
         </div>
         <div class="misc-side-nav-bar">
           <span class="misc-loan-name">872346 Jackson Smith</span>
@@ -74,12 +77,12 @@
             <span class="misc-text">Miscellaneous</span>
           </li>
           <li class="misc-supplementary-contracts list-item">
-            <a href="file-dd-21.html" class="misc-navlink">
+            <a href="file-dd-21.html" class="misc-navlink1">
               Supplementary Contracts
             </a>
           </li>
           <li class="misc-file-validation-signatures list-item">
-            <a href="file-val-signatures.html" class="misc-navlink1">
+            <a href="file-val-signatures.html" class="misc-navlink2">
               File Validation &amp; Signatures
             </a>
           </li>
@@ -185,6 +188,12 @@
         <input type="radio" name="Schedule" class="misc-radiobutton23" />
         <input type="radio" name="Repossession" class="misc-radiobutton24" />
         <input type="radio" name="Repossession" class="misc-radiobutton25" />
+        <a href="file-dd-21.html" class="misc-last button">
+          <span class="misc-text3">Last</span>
+          <svg viewBox="0 0 1024 1024" class="misc-left-arrow">
+            <path d="M658 708l-60 60-256-256 256-256 60 60-196 196z"></path>
+          </svg>
+        </a>
       </div>
     </div>
   </body>
