--- a/file-val-signatures.html
+++ b/file-val-signatures.html
@@ -5,6 +5,7 @@
     <title>1. File Val. &amp; Signatures - CORE DD</title>
     <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
+    <meta property="og:title" content="CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
 
@@ -60,23 +61,25 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="file-val-signatures-logo"
-          />
+          <a href=".html" class="file-val-signatures-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="file-val-signatures-logo"
+            />
+          </a>
         </div>
         <div class="file-val-signatures-side-nav-bar">
           <span class="file-val-signatures-loan-name">
             872346 Jackson Smith
           </span>
           <li class="file-val-signatures-miscellaneous list-item">
-            <a href="file-dd-211.html" class="file-val-signatures-navlink">
+            <a href="file-dd-211.html" class="file-val-signatures-navlink1">
               Miscellaneous
             </a>
           </li>
           <li class="file-val-signatures-supplementary-contracts list-item">
-            <a href="file-dd-21.html" class="file-val-signatures-navlink1">
+            <a href="file-dd-21.html" class="file-val-signatures-navlink2">
               Supplementary Contracts
             </a>
           </li>
