--- a/g-p-s.html
+++ b/g-p-s.html
@@ -54,43 +54,45 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="g-p-s-logo"
-          />
+          <a href=".html" class="g-p-s-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="g-p-s-logo"
+            />
+          </a>
         </div>
         <div class="g-p-s-side-nav-bar">
           <span class="g-p-s-loan-name">872346 Jackson Smith</span>
           <li class="g-p-s-supplementary-contracts list-item">
-            <a href="file-dd-21111.html" class="g-p-s-navlink">
+            <a href="file-dd-21111.html" class="g-p-s-navlink1">
               Truth in Lending
             </a>
           </li>
           <li class="g-p-s-miscellaneous list-item">
-            <a href="file-dd-211111.html" class="g-p-s-navlink1">
+            <a href="file-dd-211111.html" class="g-p-s-navlink2">
               Contract &amp; Fees
             </a>
           </li>
           <li class="g-p-s-miscellaneous1 list-item">
-            <a href="file-dd-2111111.html" class="g-p-s-navlink2">Warranty</a>
+            <a href="file-dd-2111111.html" class="g-p-s-navlink3">Warranty</a>
           </li>
           <li class="g-p-s-miscellaneous2 list-item">
-            <a href="file-dd-21111111.html" class="g-p-s-navlink3">GAP</a>
+            <a href="file-dd-21111111.html" class="g-p-s-navlink4">GAP</a>
           </li>
           <li class="g-p-s-miscellaneous3 list-item">
-            <a href="file-dd-211111111.html" class="g-p-s-navlink4">
+            <a href="file-dd-211111111.html" class="g-p-s-navlink5">
               Service Contract
             </a>
           </li>
           <li class="g-p-s-miscellaneous4 list-item">
-            <a href="file-dd-2111111111.html" class="g-p-s-navlink5">Title</a>
+            <a href="file-dd-2111111111.html" class="g-p-s-navlink6">Title</a>
           </li>
           <li class="g-p-s-miscellaneous5 list-item">
             <span class="g-p-s-text">GPS</span>
           </li>
           <li class="g-p-s-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="g-p-s-navlink6">Data Match</a>
+            <a href="file-dd-2111.html" class="g-p-s-navlink7">Data Match</a>
           </li>
           <svg viewBox="0 0 1024 1024" class="g-p-s-check">
             <path
@@ -213,6 +215,12 @@
         <span class="g-p-s-is-there-a-cobuyer13">No</span>
         <span class="g-p-s-is-there-a-cobuyer14">No</span>
         <span class="g-p-s-is-there-a-cobuyer15">No</span>
+        <a href="file-dd-2111111111.html" class="g-p-s-last button">
+          <span class="g-p-s-text3">Last</span>
+          <svg viewBox="0 0 1024 1024" class="g-p-s-left-arrow">
+            <path d="M658 708l-60 60-256-256 256-256 60 60-196 196z"></path>
+          </svg>
+        </a>
       </div>
     </div>
   </body>
