--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
   <head>
     <title>CORE DD</title>
     <meta property="og:title" content="CORE DD" />
-    <meta property="og:title" content="5. Truth in Lending - CORE DD" />
-    <meta property="og:title" content="7. Warranty - CORE DD" />
-    <meta property="og:title" content="3. Misc. - CORE DD" />
-    <meta property="og:title" content="10. Title - CORE DD" />
-    <meta property="og:title" content="9. Service Contract - CORE DD" />
-    <meta property="og:title" content="4. Data Match - CORE DD" />
-    <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
-    <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
 
@@ -51,12 +42,12 @@
       <link href="./index.css" rel="stylesheet" />
 
       <div class="index-container">
-        <a href="file-dd-2111.html" class="index-save button">
+        <a href="file-val-signatures.html" class="index-save button">
           <span class="index-text">Start Demo</span>
         </a>
         <img
-          src="public/playground_assets/core%20logo%203-200h.png"
           alt="image"
+          src="public/playground_assets/core%20logo%203-200h.png"
           class="index-image"
         />
       </div>
