--- a/supp-contracts.html
+++ b/supp-contracts.html
@@ -58,16 +58,18 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="supp-contracts-logo"
-          />
+          <a href=".html" class="supp-contracts-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="supp-contracts-logo"
+            />
+          </a>
         </div>
         <div class="supp-contracts-side-nav-bar">
           <span class="supp-contracts-loan-name">872346 Jackson Smith</span>
           <li class="supp-contracts-miscellaneous list-item">
-            <a href="file-dd-211.html" class="supp-contracts-navlink">
+            <a href="file-dd-211.html" class="supp-contracts-navlink1">
               Miscellaneous
             </a>
           </li>
@@ -75,7 +77,7 @@
             <span class="supp-contracts-text">Supplementary Contracts</span>
           </li>
           <li class="supp-contracts-file-validation-signatures list-item">
-            <a href="file-val-signatures.html" class="supp-contracts-navlink1">
+            <a href="file-val-signatures.html" class="supp-contracts-navlink2">
               File Validation &amp; Signatures
             </a>
           </li>
@@ -169,11 +171,17 @@
         </button>
         <span class="supp-contracts-buyer-entity">GPS?</span>
         <span class="supp-contracts-type-of-form">Title?</span>
+        <a href="file-val-signatures.html" class="supp-contracts-last button">
+          <span class="supp-contracts-text2">Last</span>
+          <svg viewBox="0 0 1024 1024" class="supp-contracts-left-arrow">
+            <path d="M658 708l-60 60-256-256 256-256 60 60-196 196z"></path>
+          </svg>
+        </a>
         <a href="file-dd-211.html" class="supp-contracts-next button">
           <svg viewBox="0 0 1024 1024" class="supp-contracts-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="supp-contracts-text2">Next</span>
+          <span class="supp-contracts-text3">Next</span>
         </a>
         <input
           type="radio"
