--- a/title.html
+++ b/title.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="8. GAP - CORE DD" />
     <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
+    <meta property="og:title" content="CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
 
@@ -61,32 +62,34 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="title-logo"
-          />
+          <a href=".html" class="title-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="title-logo"
+            />
+          </a>
         </div>
         <div class="title-side-nav-bar">
           <span class="title-loan-name">872346 Jackson Smith</span>
           <li class="title-supplementary-contracts list-item">
-            <a href="file-dd-21111.html" class="title-navlink">
+            <a href="file-dd-21111.html" class="title-navlink1">
               Truth in Lending
             </a>
           </li>
           <li class="title-miscellaneous list-item">
-            <a href="file-dd-211111.html" class="title-navlink1">
+            <a href="file-dd-211111.html" class="title-navlink2">
               Contract &amp; Fees
             </a>
           </li>
           <li class="title-miscellaneous1 list-item">
-            <a href="file-dd-2111111.html" class="title-navlink2">Warranty</a>
+            <a href="file-dd-2111111.html" class="title-navlink3">Warranty</a>
           </li>
           <li class="title-miscellaneous2 list-item">
-            <a href="file-dd-21111111.html" class="title-navlink3">GAP</a>
+            <a href="file-dd-21111111.html" class="title-navlink4">GAP</a>
           </li>
           <li class="title-miscellaneous3 list-item">
-            <a href="file-dd-211111111.html" class="title-navlink4">
+            <a href="file-dd-211111111.html" class="title-navlink5">
               Service Contract
             </a>
           </li>
@@ -94,10 +97,10 @@
             <span class="title-text">Title</span>
           </li>
           <li class="title-miscellaneous5 list-item">
-            <a href="file-dd-21111111111.html" class="title-navlink5">GPS</a>
+            <a href="file-dd-21111111111.html" class="title-navlink6">GPS</a>
           </li>
           <li class="title-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="title-navlink6">Data Match</a>
+            <a href="file-dd-2111.html" class="title-navlink7">Data Match</a>
           </li>
           <svg viewBox="0 0 1024 1024" class="title-check">
             <path
@@ -229,6 +232,12 @@
         <span class="title-is-there-a-cobuyer3">No</span>
         <span class="title-is-there-a-cobuyer4">No</span>
         <span class="title-is-there-a-cobuyer5">No</span>
+        <a href="file-dd-211111111.html" class="title-last button">
+          <span class="title-text4">Last</span>
+          <svg viewBox="0 0 1024 1024" class="title-left-arrow">
+            <path d="M658 708l-60 60-256-256 256-256 60 60-196 196z"></path>
+          </svg>
+        </a>
       </div>
     </div>
   </body>
