--- a/truthin-lending.html
+++ b/truthin-lending.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="8. GAP - CORE DD" />
     <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
+    <meta property="og:title" content="CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
 
@@ -67,11 +68,13 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="truthin-lending-logo"
-          />
+          <a href=".html" class="truthin-lending-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="truthin-lending-logo"
+            />
+          </a>
         </div>
         <div class="truthin-lending-side-nav-bar">
           <span class="truthin-lending-loan-name">872346 Jackson Smith</span>
@@ -79,37 +82,37 @@
             <span class="truthin-lending-text">Truth in Lending</span>
           </li>
           <li class="truthin-lending-miscellaneous list-item">
-            <a href="file-dd-211111.html" class="truthin-lending-navlink">
+            <a href="file-dd-211111.html" class="truthin-lending-navlink1">
               Contract &amp; Fees
             </a>
           </li>
           <li class="truthin-lending-miscellaneous1 list-item">
-            <a href="file-dd-2111111.html" class="truthin-lending-navlink1">
+            <a href="file-dd-2111111.html" class="truthin-lending-navlink2">
               Warranty
             </a>
           </li>
           <li class="truthin-lending-miscellaneous2 list-item">
-            <a href="file-dd-21111111.html" class="truthin-lending-navlink2">
+            <a href="file-dd-21111111.html" class="truthin-lending-navlink3">
               GAP
             </a>
           </li>
           <li class="truthin-lending-miscellaneous3 list-item">
-            <a href="file-dd-211111111.html" class="truthin-lending-navlink3">
+            <a href="file-dd-211111111.html" class="truthin-lending-navlink4">
               Service Contract
             </a>
           </li>
           <li class="truthin-lending-miscellaneous4 list-item">
-            <a href="file-dd-2111111111.html" class="truthin-lending-navlink4">
+            <a href="file-dd-2111111111.html" class="truthin-lending-navlink5">
               Title
             </a>
           </li>
           <li class="truthin-lending-miscellaneous5 list-item">
-            <a href="file-dd-21111111111.html" class="truthin-lending-navlink5">
+            <a href="file-dd-21111111111.html" class="truthin-lending-navlink6">
               GPS
             </a>
           </li>
           <li class="truthin-lending-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="truthin-lending-navlink6">
+            <a href="file-dd-2111.html" class="truthin-lending-navlink7">
               Data Match
             </a>
           </li>
@@ -225,6 +228,12 @@
           placeholder="placeholder"
           class="truthin-lending-textinput10 input"
         />
+        <a href="file-dd-2111.html" class="truthin-lending-last button">
+          <span class="truthin-lending-text3">Last</span>
+          <svg viewBox="0 0 1024 1024" class="truthin-lending-left-arrow">
+            <path d="M658 708l-60 60-256-256 256-256 60 60-196 196z"></path>
+          </svg>
+        </a>
       </div>
     </div>
   </body>
