--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,6 @@
 <html lang="en">
   <head>
     <title>CORE DD</title>
-    <meta property="og:title" content="CORE DD" />
-    <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
-    <meta property="og:title" content="11. GPS - CORE DD" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -35,22 +31,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
     />
-    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
-      <link href="./index.css" rel="stylesheet" />
-
-      <div class="index-container">
-        <a href="file-val-signatures.html" class="index-save button">
-          <span class="index-text">Start Demo</span>
-        </a>
-        <img
-          alt="image"
-          src="public/playground_assets/core%20logo%203-200h.png"
-          class="index-image"
-        />
-      </div>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
